Fix: widget/wp-search - Button and text input are not aligned (ED-1986)
Now when using the 'wp search' widget in hello theme, the button and the text input are aligned correctly.

--- a/theme.css
+++ b/theme.css
@@ -94,6 +94,9 @@ to override any of the settings in this section, add your styling code in the cu
 .bypostauthor {
   font-size: inherit; }
 
+.elementor-widget-wp-widget-search .search-submit {
+  vertical-align: middle; }
+
 /*
 DO NOT CHANGE THIS FILE
 to override any of the settings in this section, add your styling code in the custom directory.
